feat: configure CORS